# AstrumEngine

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
assets/models/: cube.fbx
assets/shaders/: default_shader.frag  default_shader.vert  outline_shader.frag
cmake/: external_settings.cmake
src/: main.cpp  pch.h
src/assets/: asset.cpp  asset.h  assets.h  image_asset.cpp  image_asset.h  model_asset.cpp  model_asset.h  text_asset.cpp  text_asset.h
src/astrum_editor/: astrum_editor.cpp  astrum_editor.h
src/astrum_editor/layers/: layers.h
src/astrum_editor/layers/graphics/: graphics.cpp  graphics.h
src/astrum_editor/layers/graphics_layer/: graphics_layer.cpp  graphics_layer.h
src/astrum_editor/layers/gui/: gui.cpp  gui.h  gui_element.h
src/astrum_editor/layers/gui_layer/: gui_layer.cpp  gui_layer.h
src/core/: app.h  entry.h
src/core/engine/: astrum_engine.cpp  astrum_engine.h
src/core/input/: input.cpp  input.h  keys.h
src/core/window/: window.cpp  window.h
src/ecs/: object.cpp  object.h
src/ecs/components/: component.cpp  component.h  factory.h  mesh.cpp  mesh.h  transform.cpp  transform.h
src/files/: files.cpp  files.h
src/gpu/: framebuffer.cpp  framebuffer.h  screen_fbo.cpp  screen_fbo.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/gpu/common/: vertex_buffer_layout.h
src/gpu/vertex_layouts/: vertex.h
src/layers/: layer.cpp  layer.h  layer_manager.cpp  layer_manager.h  layer_stack.cpp  layer_stack.h
src/math/: math.h
src/scene/: scene.cpp  scene.h
src/util/: color.h  size.h
(+38 files in other folders)
